# AudioSync

./: .gitignore  AboutThisProject_RU.md  CMakeLists.txt  CMakePreLoad.cmake  README.md  compile.bat  configuration.clangd  main.cpp
UI/Web/Client/Index/: index.html  style.css
include/: AudioLibraryInfo.hpp  BaseFunctions.hpp  Diff.hpp  InfoCSV.hpp  OtherDirectory.hpp  StreamingAPI.hpp  Tools.hpp  UI.hpp
src/: AudioLibraryInfo.cpp  InfoCSV.cpp  UI.cpp
src/BaseFunctions/: SyncWithLocalDirectories.cpp  SyncWithStreamingServices.cpp
